--- a/README.textile
+++ b/README.textile
@@ -35,4 +35,4 @@ Required Python modules:
 Of course, having an automated tool translate some strings may end up in a messy design, especially when translating to German or other verbose language. Keep in mind that you may need to review and tweak the design a bit if you want to make sure it's still usable!
 
 
-h3. Release date for v0.1: June, maybe
+h4. Release date for v0.1: -June, maybe- project almost died, but I'd love to continue it, so please give me a hand so it can be revived!
